<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jot Down That Movie</string>
    <string name="provider">All the movies and TV Shows information are provided by TheMovieDB:</string>
    <string name="about">About</string>
    <string name="follow_git">Follow the project on GitHub:</string>
    <string name="action_settings">Settings</string>
    <string name="hola">Search</string>
    <string name="Cancel">Cancel</string>
    <string name="nombre">Name:</string>
    <string name="anyo">Year:</string>
    <string name="director">Director:</string>
    <string name="directors">Directors:</string>
    <string name="gender">Gender:</string>
    <string name="genders">Genders:</string>
    <string name="valoracion">Valoration:</string>
    <string name="film">Film</string>
    <string name="added">added</string>
    <string name="notavailable">N/A</string>
    <string name="addMovie">+ Add new movie...</string>
    <string name="addButton">Add</string>
    <string name="backButton">Back</string>
    <string name="deleteButton">Remove</string>
    <string name="searching">Searching</string>
    <string name="saving">Saving</string>
	<string name="title_activity_main">Unseen Movies</string>
	<string name="title_activity_saludo">Search</string>
    <string name="title_activity_results">Search results</string>
    <string name="title_activity_now_playing">Now playing</string>
    <string name="title_activity_upcoming">Upcoming</string>
    <string name="title_activity_info">Movie info</string>
    <string name="removed">removed</string>
    <string name="Movie">Movie</string>
    <string name="Sinopsis">Synopsis:</string>
    <string name="IconCredits">App Icon made by <string name="Roundicons"><a href="https://roundicons.com/">Roundicons</a></string> from <string name="Flaticon"><a href="https://www.flaticon.com">www.flaticon.com</a></string></string>
    <string name="IconCameraCredits">Camera icon made by <string name="Chris Veigt"><a href="http://chrisveigt.com/">Chris Veigt</a></string> from <string name="Flaticon"><a href="https://www.flaticon.com">www.flaticon.com</a></string></string>
    <string name="IconTVCredits">Television icon made by <string name="Freepic"><a href="https://www.freepik.com/">Freepic</a></string> from <string name="Flaticon"><a href="https://www.flaticon.com">www.flaticon.com</a></string></string>
    <string name="IconPosterCredits">Poster icon made by <string name="Freepic"><a href="https://www.freepik.com/">Freepic</a></string> from <string name="Flaticon"><a href="https://www.flaticon.com">www.flaticon.com</a></string></string>
    <string name="IconUserCredits">Person icon made by <string name="Freepic"><a href="https://www.freepik.com/">Freepic</a></string> from <string name="Flaticon"><a href="https://www.flaticon.com">www.flaticon.com</a></string></string>
    <string name="IconCalendarCredits">Calendar icon made by <string name="Freepic"><a href="https://www.freepik.com/">Freepic</a></string> from <string name="Flaticon"><a href="https://www.flaticon.com">www.flaticon.com</a></string></string>
    <string name="IconStarCredits">Star  icon made by <string name="Pixel perfect"><a href="https://icon54.com/">Pixel perfect</a></string> from <string name="Flaticon"><a href="https://www.flaticon.com">www.flaticon.com</a></string></string>
    <string name="IconKnownCredits">Who is? icon made by <string name="Freepic"><a href="https://www.freepik.com/">Freepic</a></string> from <string name="Flaticon"><a href="https://www.flaticon.com">www.flaticon.com</a></string></string>
    <string name="IconCastCredits">Case icon made by <string name="Eucalyp"><a href="https://creativemarket.com/eucalyp">Eucalyp</a></string> from <string name="Flaticon"><a href="https://www.flaticon.com">www.flaticon.com</a></string></string>
    <string name="IconCrewCredits">Crew icon made by <string name="monkik"><a href="https://www.flaticon.com/authors/monkik">monkik</a></string> from <string name="Flaticon"><a href="https://www.flaticon.com">www.flaticon.com</a></string></string>
    <string name="Movies">Movies</string>
    <string name="TVShows">TV Shows</string>
    <string name="SearchType">Search Type:</string>
    <string name="Seasons">Seasons:</string>
    <string name="Show">TV Show</string>
    <string name="Filter">Filter</string>
    <string name="Search">Search</string>
    <string name="FilterAll">All NOT SEEN</string>
    <string name="FilterMovie">MOVIES NOT SEEN</string>
    <string name="FilterTVShow">TV SHOWS NOT SEEN</string>
    <string name="SelectFilter">Select a filter</string>
    <string name="StartPrimaryText">Start here!</string>
    <string name="StartSecondaryText">Welcome! Tap here to start</string>
    <string name="SearchPrimaryText">Find something</string>
    <string name="SearchSecondaryText">Find a movie, tv show, person...</string>
    <string name="button_undo">Undo</string>
    <string name="SimilarMovies">Similar movies:</string>
    <string name="Similars">Similars</string>
    <string name="AvailableTrailers">Available trailers</string>
    <string name="OriginalTitle">Otriginal title</string>
    <string name="OriginalLanguage">Original language</string>
    <string name="Refresh">Refresh</string>
    <string name="NeedsRefresh">Needs refresh</string>
    <string name="RefreshedSuccess">Refreshed succesfully!</string>
    <string name="RefreshedError">An error ocurred while refreshing, try again later</string>
    <string name="Spanish">Spanish</string>
    <string name="English">English</string>
    <string name="Viewed">VIEWED</string>
    <string name="MarkAsViewed">Mark as viewed</string>
    <string name="MarkAsNOTViewed">Mark as NOT viewed</string>
    <string name="MarkedAsViewed">Marked as viewed!</string>
    <string name="MarkedAsNOTViewed">Marked as NOT viewed</string>
    <string name="MarkAsViewedError">An error ocurred while updating, try again later</string>
    <string name="SearchStreaming">Find streaming services</string>
    <string name="NoStreams">W/O Data</string>
    <string name="ProvidedBy">(Provided by:</string>
    <string name="CloseParentesis">)</string>
    <string name="MovieInfoProvidedBy">Movie info provided by:</string>
    <string name="ShowInfoProvidedBy">Show info provided by:</string>
    <string name="InfoProvidedBy">Info provided by:</string>
    <string name="Streaming">Streaming:</string>
    <string name="StreamingSubscription">Subscription</string>
    <string name="StreamingFree">Free</string>
    <string name="StreamingAds">Free with ads</string>
    <string name="StreamingRent">Rent</string>
    <string name="StreamingBuy">Buy</string>
    <string name="SelectCountry">Select a country</string>
    <string name="ChangeCountryFormat">Streaming available in %1$s (change country)</string>
    <string name="ResultsForCountry">Results for %1$s</string>
    <string name="Language">Language</string>
    <string name="Save">Save</string>
    <string name="LanguageSettings">Language settings</string>
    <string name="AppLanguage">App language</string>
    <string name="SearchLanguage">Data language *</string>
    <string name="SearchLanguageWarning">* If you change the data language, the saved movies will not be updated. You must refresh each movie.</string>
    <string name="SpanishES">Spanish (Spain)</string>
    <string name="SpanishMX">Spanish (Mexico)</string>
    <string name="SearchFor">Movie, tv show, person...</string>
    <string name="KnownFor">Known for:</string>
    <string name="Cast">Cast</string>
    <string name="Crew">Crew</string>
    <string name="Voice">Voice</string>
    <string name="BirthDay">Birthday:</string>
    <string name="Order">Order</string>
    <string name="SelectOrder">Select the list order:</string>
    <string name="SaveOrder">Saved</string>
    <string name="Valoration">Valoration</string>
    <string name="Year">Year</string>
    <string name="Title">Title</string>
    <string name="OrderTypeAsc">Ascending</string>
    <string name="OrderTypeDesc">Descending</string>


    <string name="not_internet">Can\'t connect to server, is internet enable?</string>
    <string name="without_results">No results founds.</string>
    <string name="empty_search">Write at least one letter.</string>

    <string name="OpcLista1">Modify</string>
	<string name="OpcLista2">Remove</string>
    <string name="MenuAbout">About</string>
    <string name="MenuQuit">Close App</string>
    <string name="MenuSearch">Search/Add</string>
    <string name="MenuExport">Export data</string>
    <string name="MenuImport">Import data</string>
    <string name="ImportWarningTitle">Import data</string>
    <string name="ImportWarningMessage">This will replace all the movies and shows you currently have saved with the contents of the selected file. This cannot be undone.</string>
    <string name="ExportError">Could not export your data.</string>
    <string name="ImportSuccess">Data imported successfully.</string>
    <string name="ImportError">Could not import this file. Make sure it is a valid AnotaCine backup.</string>
    <string name="ImportingProgress">Importing… (%1$d items)</string>
    <string name="alreadySaved">was already saved!</string>

    <string name="notAviableTrailer">Not available trailer, try with another language</string>
    <string name="noSimilarMovies">Cannot recognize similars!</string>
    <string name="Noresults">No results found</string>
    <string name="For">for</string>
    <string name="Trywith">Do you want to repeat the search for</string>
    <string name="SearchLabel">Text to search:</string>

	<string name="image">Thumbnail</string>

    <string name="name">Name</string>
	
</resources>
