<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/OrderRadioGroup">

        <RadioButton
            android:id="@+id/rdbSaveOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SaveOrder"/>

        <RadioButton
            android:id="@+id/rdbYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Year"/>

        <RadioButton
            android:id="@+id/rdbValoration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Valoration"/>

        <RadioButton
            android:id="@+id/rdbTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title"/>
    </RadioGroup>

    <Spinner
        android:id="@+id/orderTypeAD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:spinnerMode="dropdown" />

</LinearLayout>