<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/searchLanguageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/AppLanguage"
        android:textColor="@color/verde"
        android:textStyle="bold"
        app:fontFamily="@font/raleway" />

    <Spinner
        android:id="@+id/app_language_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/appLanguageLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SearchLanguage"
        android:textColor="@color/verde"
        android:textStyle="bold"
        app:fontFamily="@font/raleway" />

    <Spinner
        android:id="@+id/search_language_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/SearchLanguageWarning"
        android:textColor="@color/rojo"
        android:textSize="10sp"
        app:fontFamily="@font/raleway" />

</LinearLayout>