<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relativeLayout1"
        android:layout_alignParentTop="true"
        android:background="@color/gris_oscuro" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <!-- Row 1 with single column -->

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/gris_oscuro"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="Large Text"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gris_claro"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/poster"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="0.6" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0.4"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/AnyoLab"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/anyo" />

                        <TextView
                            android:id="@+id/Anyo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="TextView" />

                        <TextView
                            android:id="@+id/generoLab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender" />

                        <TextView
                            android:id="@+id/genero"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="TextView" />

                        <TextView
                            android:id="@+id/directorLAb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/director" />

                        <TextView
                            android:id="@+id/director"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="TextView" />

                        <TextView
                            android:id="@+id/valoracionLab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/valoracion" />

                        <TextView
                            android:id="@+id/valoracion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="TextView" />
                    </LinearLayout>
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/gris_oscuro" >

                <TextView
                    android:id="@+id/toda_la_descripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:text="TextView" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/gris_claro"
        android:orientation="vertical" >

        <Button
        android:id="@+id/BtnAnadir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/addButton" />
        
        <Button
        android:id="@+id/BtnTrailer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Trailer" />
        
        <Button
        android:id="@+id/BtnAtras"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/backButton" />
    </RelativeLayout>

</RelativeLayout>